--- a/_includes/content.html
+++ b/_includes/content.html
@@ -45,6 +45,7 @@
     <hr>
   </div>
 </div>
+
 <div class="row">
   <div class="col col-lg-6 col-12">
     <h3 class="text-center">
@@ -83,6 +84,15 @@
 </div>
 
 <div class="row" id="testimonials">
+  <div class="col col-md-12">
+    <h1 class="text-center">
+      Testimonials
+    </h1>
+    <hr>
+  </div>
+</div>
+
+<div class="row">
   <div class="col-md-12">
     {% include testimonials.html %}
   </div>
@@ -107,7 +117,7 @@
   <div class="col col-md-12">
     <h2 class="text-center">
       Email:
-      <a href="mailto:{{site.data.contact_info.email}}">{{site.data.contact_info.email}}</a>
+      <a href="mailto:{{site.data.footer.email}}">{{site.data.footer.email}}</a>
     </h2>
   </div>
 </div>
