--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -22,3 +22,30 @@
 </div>
 <h3 id="more-testimonials">See more testimonials...</h3>
 <h3 id="fewer-testimonials">See fewer testimonials...</h3>
+<script>
+    let menu = document.querySelectorAll('.side-nav-wrapper');
+    let clickFunc = () => menu.forEach(m => m.classList.toggle('open'));
+    document.querySelectorAll('.nav-button,a').forEach(el => el.onclick = clickFunc);
+
+    let moreTestimonialsButton = document.querySelector('#more-testimonials');
+    let fewerTestimonialsButton = document.querySelector('#fewer-testimonials');
+    let testimonialsExpandable = document.querySelector('.testimonials.expandable')
+    let testimonialsExpandableContainer = document.querySelector('.expandable-wrapper')
+
+    moreTestimonialsButton.onclick = () => {
+        moreTestimonialsButton.style.visibility = 'hidden';
+        moreTestimonialsButton.style.width = '0px';
+        fewerTestimonialsButton.style.visibility = 'visible';
+        fewerTestimonialsButton.style.width = 'auto';
+        let height = testimonialsExpandable.getBoundingClientRect().height;
+        testimonialsExpandableContainer.style.height = `${height}px`;
+    }
+
+    fewerTestimonialsButton.onclick = () => {
+        fewerTestimonialsButton.style.visibility = 'hidden';
+        fewerTestimonialsButton.style.width = '0px';
+        moreTestimonialsButton.style.visibility = 'visible';
+        moreTestimonialsButton.style.width = 'auto';
+        testimonialsExpandableContainer.style.height = '0px';
+    }
+</script>
