--- a/_includes/gallery_launcher.html
+++ b/_includes/gallery_launcher.html
@@ -1,5 +1,5 @@
 <div class="gallery-launcher">
-    <a class="category" href="/gallery/oil_portraits">
+    <a class="category" href="/gallery/oil_portraits.html">
         <div class="image-wrapper">
             <div class="image"><img src="http://res.cloudinary.com/bhirsch-cloud/image/upload/c_fill,g_face:center,h_500,w_500/v1/rebecca-becker/kwqzydnspwe4jnr0hdgd"></div>
         </div>
@@ -7,7 +7,7 @@
             <div class="category-name">Oil Portraits</div>
         </div>
     </a>
-    <a class="category" href="/gallery/pastel_portraits">
+    <a class="category" href="/gallery/pastel_portraits.html">
         <div class="image-wrapper">
             <div class="image"><img src="http://res.cloudinary.com/bhirsch-cloud/image/upload/c_fill,g_face:center,h_500,w_500/v1/rebecca-becker/uylbhqg8yd0s7yqxvpp1"></div>
         </div>
@@ -15,7 +15,7 @@
             <div class="category-name">Pastel Portraits</div>
         </div>
     </a>
-    <a class="category" href="/gallery/pet_portraits">
+    <a class="category" href="/gallery/pet_portraits.html">
         <div class="image-wrapper">
             <div class="image"><img src="http://res.cloudinary.com/bhirsch-cloud/image/upload/c_fill,g_face:center,h_500,w_500/v1/rebecca-becker/yuge1a3oqviyhzgkxaml"></div>
         </div>
@@ -23,7 +23,7 @@
             <div class="category-name">Pet Portraits</div>
         </div>
     </a>
-    <a class="category" href="/gallery/abstracts_and_landscapes">
+    <a class="category" href="/gallery/abstracts_and_landscapes.html">
         <div class="image-wrapper">
             <div class="image"><img src="http://res.cloudinary.com/bhirsch-cloud/image/upload/c_fill,g_face:center,h_500,w_500/v1/rebecca-becker/aeklelpmirhyisiwb3z8"></div>
         </div>
