--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,7 +1,7 @@
 <div class="text-center" id="home">
   <div class="header">
     <div class="cursive">
-      Rebecca Becker
+      Rebecca Paris
     </div>
   </div>
 </div>
@@ -109,7 +109,7 @@
 
 <div class="row">
   <div class="col col-md-12">
-    <h2 class="text-center">Rebecca Becker, Atlanta Artist</h2>
+    <h2 class="text-center">Rebecca Paris, Atlanta Artist</h2>
   </div>
 </div>
 
